@@ -98,6 +98,23 @@
     <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td>
   </tr>
 
+    <tr>
+    <td><p align="center"><img src="@IMAGES@slackware-logo.png"></p></td>
+    <td>
+      Slackware 
+    </td>
+    <td>
+      9
+    </td>
+    <td>
+      <b>Download
+	<a href="ftp://ftp.connection.com.br/linux/slackware-9/lilypond/lilypond-2.0.1-i386-1.tgz">tarball</a></b>
+    </td>
+    <td>2.0.1</td>
+    <td><a href="mailto:hoffmannATuninetDOTcomDOTbr">Ricardo Hoffmann</a></td>
+  </tr>
+
+  
   <tr>
     <td><p align="center"><img src="@IMAGES@macosx.jpeg"></p></td>
     <td>
