@@ -53,6 +53,11 @@
   <tr>
     <td width="55%">
       <dl>
+      <dt>October 9, 2003</dt>
+      <dd>
+      LilyPond 2.0.1  binaries for Slackware 9
+      available from <a href="download/#2.0">here.</a>
+      </dd>
 	<dt>October 5, 2003</dt>
 	<dd>LilyPond 2.0.1 binaries are available for Macos X.
 	  Download <a href="download/macos.html">here</a>.  Thanks to
@@ -66,23 +71,6 @@
 	  Fodor, our new Cygwin maintainer!
 	</dd>
 	
-	<dt>September 29, 2003</dt>
-	<dd> LilyPond 2.0.1 is released. It
-	  contains minor bugfixes.
-	  See the
-	  <a href="http://lilypond.org/doc/v2.0/Documentation/out-www/ChangeLog.txt">
-	    ChangeLog</a>
-	  or download <a href="download/#2.0">here</a> directly.
-	</dd>
-
-	<dt>September 27, 2003</dt>
-	<dd>
-	  PlanetCCRMA has been updated to include LilyPond 2.0. Go
-	  
-	  <a href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">
-	    here</a> to download.  Thanks to Fernando Pablo
-	  Lopez-Lezcano!
-	</dd>
 
       </dl>
       <p align="right"><a href="old-news.html">older news...</a></p>
@@ -101,7 +89,7 @@
 	  
 	  <tr>
 	    <td>Stable</td>
-	    <td>2.0.0</td>
+	    <td>2.0.1</td>
 	    <td>
 	      <a href="http://lilypond.org/doc/v2.0/Documentation/out-www/">Documentation</a>,
 	      <a href="download/#2.0">download</a>.
