@@ -1,3 +1,7 @@
+2003-10-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* site/download/index.html: add slackware package.
+
 2003-10-06  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/download/index.html: 
